<resources>
    <string name="app_name">ExpenseManager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_list">List</string>
    <string name="action_tabs">Tabs</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_display">DisplayActivity</string>

    <!-- item card defaults -->
    <string name="def_name_en">eng</string>
    <string name="def_name_te">tel</string>
    <string name="def_avl_qty">0 Kg</string>
    <string name="avl">Avl</string>
    <string name="def_req_qty">0 Kg</string>
    <string name="req">Req</string>

    <!-- Add dialog -->
    <string name="add_title">Add Item</string>
    <string name="category">Category</string>
    <string name="name_en">Name-English</string>
    <string name="name_te">Name-Telugu</string>
    <string name="req_qty">Required Quantity</string>
    <string name="add">ADD</string>

    <!-- Spinner items-->
    <string name="prompt">unit?</string>
    <string-array name="unit_array">
        <item>Kgs</item>
        <item>Litres</item>
        <item>Number</item>
    </string-array>
</resources>
